# ChangeLog for sys-apps/portage
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1229 2013/03/20 17:46:29 jer Exp $

  20 Mar 2013; Jeroen Roovers <jer@gentoo.org> portage-2.1.11.55.ebuild:
  Stable for HPPA (bug #462134).

*portage-2.2.0_alpha168 (20 Mar 2013)

  20 Mar 2013; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha168.ebuild,
  -portage-2.2.0_alpha167.ebuild:
  2.2.0_alpha168 version bump. This includes all of the fixes in 2.1.11.57. Bug
  #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.11.57 (20 Mar 2013)

  20 Mar 2013; Zac Medico <zmedico@gentoo.org> +portage-2.1.11.57.ebuild,
  -portage-2.1.11.56.ebuild:
  2.1.11.57 version bump. This fixes bug #462412 (regression in 2.1.11.56 and
  2.2.0_alpha167 which removed the portageq envvar -v option, breaking things
  like etc-update and emerge-webrsync). Bug #462382 tracks all bugs fixed since
  portage-2.1.11.55.

*portage-2.2.0_alpha167 (19 Mar 2013)

  19 Mar 2013; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha167.ebuild:
  2.2.0_alpha167 version bump. This includes all of the fixes in 2.1.11.56. Bug
  #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.11.56 (19 Mar 2013)

  19 Mar 2013; Zac Medico <zmedico@gentoo.org> +portage-2.1.11.56.ebuild:
  2.1.11.56 version bump. This fixes bug #460510 (splitdebug build-id newlines
  with glibc-2.17), bug #461412 (display emerge spinner while looking up file
  owners), bug #461464 (trigger autounmask as necessary for rebuilds involving
  subslots), bug #461908 (distiguish preserved consumers in preserve-libs
  display), bug #461944 (exempt multilib-minimal from repoman get_libdir check),
  bug #461948 (allow ::repo atoms in overlay package.mask if eapi allows), and
  bug #462362 (make repoman honor PORTAGE_GPG_DIR for git signed commits). Bug
  #462382 tracks all bugs fixed since portage-2.1.11.55.
