@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1229 2013/03/20 17:46:29 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1230 2013/03/21 23:39:11 zmedico Exp $
+
+  21 Mar 2013; Zac Medico <zmedico@gentoo.org> portage-9999.ebuild:
+  Add experimental PYTHON_TARGETS support (instead of setting PYTHONPATH via
+  /etc/env.d).
 
   20 Mar 2013; Jeroen Roovers <jer@gentoo.org> portage-2.1.11.55.ebuild:
   Stable for HPPA (bug #462134).
